user sees about text on about page

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -9,11 +9,9 @@
   .container
     .body
       %h4.box.dark.mb5 About Search&amp;Restore
-      %p Search And Restore is a 501(c)3 non-profit organization dedicated to developing and uniting the audience for new jazz music. We organize concerts and festivals, as well as this website which currently serves as a home for concert listings for the jazz scene in New York City. Now, after an inspiring Kickstarter fundraiser for $75,000 , we're working on a new and improved website. Throughout 2011 we're going to film 200 concerts throughout the city, and build an artist page for every musician in every video, integrating their pages with concert listings, more in depth venue profiles, and a lot, lot more. So please sign up for our email list so you can be in the loop on when we launch. In the mean time we have some incredible concerts coming up and are working on the Undead Jazzfest for this June. If you'd like to support us in any way, please send an email to SearchAndRestore@gmail.com 
-
-      %p SearchAndRestore.com is the go-to place for live jazz, improvised, and experimental music in New York City. We give you daily show picks and full calendar listings; venue profiles for every space in the five boroughs to see live jazz and improvised music, organized by size, location, affordability, student friendliness, and more; artist interviews and features; concert reviews; exclusive audio, video, and photo content from throughout the scene; editorials from a cast of characters currently presenting, performing, or otherwise furthering new jazz and improvised music; and a whole lot more. 
-
-      %p The site is for seasoned veterans, as well as anyone who wants to see great live jazz in New York, but doesn't quite know where to start. (As it turns out, we also feature a wide variety of other incredible progressive music not typically considered "jazz"). Our aim is to bring more people out to more shows, and keep everyone posted on what's happening. It's all part of our greater mission to build a sustainable community for this music in NYC and beyond. 
+      #about
+        :textile
+          #{@about.about}
 .col-3
   .container.skin-dark
     .body
