--- a/public/stylesheets/sass/components/forms.scss
+++ b/public/stylesheets/sass/components/forms.scss
@@ -77,6 +77,7 @@
         float: none;
         font-weight: normal;
         padding-left: 5px;
+        padding-top:5px;
       }
       &.text {
         .input,
