--- a/public/stylesheets/sass/jquery_ui.scss
+++ b/public/stylesheets/sass/jquery_ui.scss
@@ -371,9 +371,9 @@
 .ui-datepicker .ui-state-highlight,
 .ui-datepicker .ui-state-hover {background: #ff9900; border: 1px solid #ff9900 !important; color: #fff !important;}
 
-.ui-datepicker { background: #000;width: 17em; padding: .2em .2em 0; display: none;padding:5.5px; }
-.ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; background: #000 !important;}
-.ui-datepicker .ui-datepicker-header.ui-widget-header { background: #000 !important; border-radius: 0; border: none;}
+.ui-datepicker { background: url(/images/black_container_bg.png);width: 17em; padding: .2em .2em 0; display: none;padding:5.5px; }
+.ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; background: url(/images/black_container_bg.png) !important;}
+.ui-datepicker .ui-datepicker-header.ui-widget-header { background: url(/images/black_container_bg.png) !important; border-radius: 0; border: none;}
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
 .ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover { top: 1px; border: none !important; background: #000 !important;}
 .ui-datepicker .ui-datepicker-prev { left:2px; }
@@ -382,7 +382,7 @@
 .ui-datepicker .ui-datepicker-next-hover { right:1px; }
 .ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span { display: block; position: absolute; left: 50%; margin-left: -8px; top: 50%; margin-top: -8px;  }
 .ui-datepicker .ui-datepicker-prev-hover span, .ui-datepicker .ui-datepicker-next-hover span {border: none !important;background-color: #000 !important; background-image: url(/images/jquery_ui/ui-icons_ffffff_256x240.png) !important;left: 50% !important; top: 50% !important;}
-.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; background: #000;}
+.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; background: url(/images/black_container_bg.png);}
 .ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
 .ui-datepicker select.ui-datepicker-month-year {width: 100%;}
 .ui-datepicker select.ui-datepicker-month, 
