only shows venue name in show search results

--- a/app/views/shows/index.html.haml
+++ b/app/views/shows/index.html.haml
@@ -46,7 +46,7 @@
       %li.container[show]
         .body
           %p.box.dark.band= show.group_name
-          = link_to("#{show.venue.name}, #{show.venue.address}", show.venue, :class => 'box venue')
+          = link_to("#{show.venue.name}", show.venue, :class => 'box venue')
           %p.date= show.when.strftime("%d/%m/%Y %I:%M%p")
           .clear
 
