--- a/public/stylesheets/pages/shows.css
+++ b/public/stylesheets/pages/shows.css
@@ -17,3 +17,5 @@
 .jazz.page-shows .show-listing ul li {
   padding-bottom: 0px;
   margin-bottom: 5px; }
+  .jazz.page-shows .show-listing ul li.featured-musician a.box {
+    font-weight: normal; }
