--- a/app/views/shows/index.html.haml
+++ b/app/views/shows/index.html.haml
@@ -54,7 +54,7 @@
             %h3#featured-musicians-title Featured Musicians:
             %ul.inline-list
               - show.performances.each do |performance|
-                %li= link_to("#{performance.artist.name} (#{performance.instrument.name})", performance.artist, :class => 'box')
+                %li.featured-musician= link_to(content_tag(:strong,performance.artist.name) << "(#{performance.instrument.name})", performance.artist, :class => 'box')
 
           - if show.description.present?
             %h3 About This Show
