--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -24,6 +24,7 @@
           margin-bottom: 1px;
           text-transform: uppercase;
           color: #fff;
+          font-size:12px;
         }
         p.instrument {
           margin-bottom: 5px;
