changes padding on blocks in left side of artist page

--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -56,6 +56,11 @@
           display: none;
         }
       }
+      #known_associates .body,
+      #shop .body,
+      #shows .body {
+        padding: 5px 10px 10px 10px;
+      }
       #shop {
         ul.inline-list {
           li {
