--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -68,6 +68,9 @@
           }
         }
       }
+      .venue-link {
+        color: $ORANGE;
+      }
       #related_videos {
         margin-bottom:15px;
         .body {padding:0px;}
