--- a/public/stylesheets/sass/pages/home.scss
+++ b/public/stylesheets/sass/pages/home.scss
@@ -28,6 +28,7 @@
     }
     #featured-video .body {
       padding: 5px;
+      img {width:290px}
       .box.dark {
         width: 290px;
       }
