changes labels to just say first and last......keeps text from wrapping

--- a/app/views/shared/_mailing_list.html.haml
+++ b/app/views/shared/_mailing_list.html.haml
@@ -10,12 +10,12 @@
               = email_field_tag 'EMAIL', nil, :id => 'mce-EMAIL', :class => 'required email'
 
           .field.text.mc-field-group
-            = label_tag 'mce-FNAME', 'First Name:'
+            = label_tag 'mce-FNAME', 'First:'
             .wrapper
               = text_field_tag 'FNAME', nil, :id => 'mce-FNAME'
 
           .field.text.mc-field-group
-            = label_tag 'mce-LNAME', 'Last Name:'
+            = label_tag 'mce-LNAME', 'Last:'
             .wrapper
               = text_field_tag 'LNAME', nil, :id => 'mce-LNAME'
 
