--- a/app/views/venues/index.html.haml
+++ b/app/views/venues/index.html.haml
@@ -20,7 +20,7 @@
 .col-2
   %ul.inline-list.grid-view{:style => 'margin-top:33px;'}
     - @venues.each do |venue|
-      %li.container{:class => cycle('first','','last'), :data => { :latitude => venue.latitude, :longitude => venue.longitude }}
+      %li.container{:class => cycle('first','','last'), :data => { :latitude => venue.latitude, :longitude => venue.longitude, :name => venue.name, :address => venue.address }}
         %a.block{:href => url_for(venue), :title => venue.name}
           .body
             = image_tag(venue.image.url(:thumb), :style => 'width: 140px; height: 140px;')
