--- a/app/views/venues/show.html.haml
+++ b/app/views/venues/show.html.haml
@@ -29,7 +29,7 @@
         = link_to('See All Shows at this Venue', shows_path(:search => { :venue_id_equals => @venue.id }), :class => 'box')
 
 
-.col-2{ :data => { :latitude => @venue.latitude, :longitude => @venue.longitude } }
+.col-2{ :data => { :latitude => @venue.latitude, :longitude => @venue.longitude, :name => @venue.name, :address => @venue.address } }
   .section
     .container.skin-dark
       .body
