moves related show videos outside white container on videos and artists page.  styles these to use the white container border.

--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -26,8 +26,7 @@
             .clear
 
   .col-2
-    .section
-      .container= content_for?(:video_content) ? yield(:video_content) : yield
+    .section= content_for?(:video_content) ? yield(:video_content) : yield
 
     - if @videos.present?
       .section.pl10.pt5
