--- a/app/views/application/_player.html.haml
+++ b/app/views/application/_player.html.haml
@@ -1,30 +1,33 @@
 - show = selected_video.show
 
-#video_player_container.body{ :data => { :video => selected_video.id, 
-                                         :show  => show.id } }
-  :plain
-    #{selected_video.embed_code}
-  %p
-    = link_to(show.group_name, show, :class => 'box dark')
-    - if show.venue.present?
-      = link_to(show.venue.name, show.venue, :class => 'venue-link')
-    = show.when.strftime("%m/%d/%Y")
+#video_player_container{ :data => { :video => selected_video.id, :show => show.id} }
+  .container.section.mb15
+    .body
+      :plain
+        #{selected_video.embed_code}
+      %p
+        = link_to(show.group_name, show, :class => 'box dark')
+        - if show.venue.present?
+          = link_to(show.venue.name, show.venue, :class => 'venue-link')
+        = show.when.strftime("%m/%d/%Y")
+    
+    
+      %h3 Featured Artists
+      %ul.inline-list
+        - show.performances.each do |performance|
+          %li= link_to_if(performance.artist.live?, "#{performance.artist.name} (#{performance.instrument.present? ? performance.instrument.name : performance.artist.instrument.name})",
+            performance.artist, :class => 'box')
 
   - if show.videos.count > 1
-    %h3 More Videos from this Show
-    %ul#related_videos.inline-list
-      - show.videos.each do |video|
-        %li.container{ :class => (selected_video == video ? 'active' : '') << cycle('','','','last') }
-          %a.block{:href => video_path(video), :title => video.title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
-            .body
-              = image_tag(video.thumbnail.url(:tiny))
-              .clear
-              %span.box.block.name
-                %span= video.title
-
-  %h3 Featured Artists
-  %ul.inline-list
-    - show.performances.each do |performance|
-      %li= link_to_if(performance.artist.live?, "#{performance.artist.name} (#{performance.instrument.present? ? performance.instrument.name : performance.artist.instrument.name})",
-        performance.artist, :class => 'box')
-
+    %h3.pl10 More videos from this show:
+    .section
+      %ul#related_videos.inline-list.grid-view
+        - show.videos.each do |video|
+          %li{ :class => cycle('first','','','last') }
+            = render :partial => 'videos/video_thumb', :locals => { :video => video }
+        -#  %a.block{:href => video_path(video), :title => video.title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
+        -#    .body
+        -#      = image_tag(video.thumbnail.url(:tiny))
+        -#      .clear
+        -#      %span.box.block.name
+        -#        %span= video.title
