--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -166,11 +166,10 @@
             var current_show_id = $('#video_player_container').attr('data-show');
             var new_show_id     = $(this).attr('data-show');
             var video_id        = $(this).attr('data-video');
-
+            
             if (current_show_id != new_show_id) {
               // if this video is part of a different show we need to load information
               // specific to this video and it's related show
-
               // TODO show loading?
               $.get('/videos/' + video_id, function(data) {
                 $('#video_player_container').replaceWith(data);
@@ -179,11 +178,11 @@
               });
             } else {
               // otherwise it's a related video and we can just swap out the code
-              $('#video_player_container > iframe').replaceWith($(this).attr('data-embed_code'));
+              $('#video_player_container iframe').replaceWith($(this).attr('data-embed_code'));
             }
 
-            $('a[data-video]').parent('li').removeClass('active');
-            $('a[data-video=' + video_id + ']').parent('li').addClass('active');
+            $('a[data-video]').removeClass('active');
+            $('a[data-video=' + video_id + ']').addClass('active');
 
             e.preventDefault();
             return false;
