user sees video description on homepage

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -38,8 +38,12 @@
       .section#featured-video
         .container
           .body
-            - if @latest_video.present?
-              = render :partial => 'videos/video_thumb', :locals => { :video => @latest_video }
+            - if @featured_video.present?
+              = render :partial => 'videos/video_thumb', :locals => { :video => @featured_video }
+
+              - if @featured_video_description
+                .video_description= @featured_video_description
+
             = link_to('See more videos...', videos_path, :class => 'box')
     .clear
   
