adds darker black container background.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
 #main-content-secondary
   .col-1-2
     .section#exciting-news
-      .container.skin-dark
+      .container.skin-dark.darker
         .body
           %h3
             = image_tag('/images/home/exciting_news.png', :alt => 'Exciting News')
