--- a/public/stylesheets/sass/components/containers.scss
+++ b/public/stylesheets/sass/components/containers.scss
@@ -10,6 +10,9 @@
       .body {
         padding-bottom: 20px;
       }
+      &.darker {
+        background: url(/images/black_container_bg_darker.png);
+      }
     }
     &.with-tip {
       overflow: visible;
