--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -168,7 +168,8 @@
       margin-bottom: 2px; }
     .jazz ul.grid-view li .body .byline {
       margin-bottom: 0px;
-      padding-left: 5px; }
+      padding-left: 5px;
+      white-space: nowrap; }
 .jazz ul.header-meta-list .byline {
   margin-bottom: 2px; }
   .jazz ul.header-meta-list .byline .date {
