--- a/public/stylesheets/sass/components/lists.scss
+++ b/public/stylesheets/sass/components/lists.scss
@@ -49,6 +49,7 @@
           .byline {
             margin-bottom: 0px;
             padding-left: 5px;
+            white-space:nowrap;
           }
         }
       }
