--- a/app/views/videos/_video_thumb.html.haml
+++ b/app/views/videos/_video_thumb.html.haml
@@ -6,7 +6,7 @@
 
 %a.block.video-thumb{ :href => video_path(video, video_url_params), :title => title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code } }
   .body
-    = image_tag(video.thumbnail.url(:tiny))
+    = image_tag(video.thumbnail.url(:tiny), :alt => title)
     .clear
     %span.box.block.name
       %span= group_name 
