--- a/public/stylesheets/pages/venues.css
+++ b/public/stylesheets/pages/venues.css
@@ -4,6 +4,8 @@
   background: url(/images/masthead_bg/venues.png) repeat-x; }
 .jazz.section-venues.page-index .searchy-inline select {
   width: 223px; }
+.jazz.section-venues.page-index .searchy-inline * {
+  margin-bottom: 2px; }
 .jazz.section-venues.page-show fieldset.searchy .field.select .input {
   float: left; }
 .jazz.section-venues.page-show fieldset.searchy .field.select .submit {
