fix search selects for ie

--- a/public/stylesheets/sass/components/forms.scss
+++ b/public/stylesheets/sass/components/forms.scss
@@ -102,8 +102,10 @@
        } 
        .input {
          margin-right: 3px;
-         width: 250px;
-         select {width: 250px;}
+         width: 249px;
+         select {
+          width: 249px;
+         }
        }
       }
     }
