--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -19,6 +19,7 @@
         .body {
           position: relative;
           padding-bottom: 26px;
+          zoom:1;
         }
         h3.name {
           margin-bottom: 1px;
