--- a/public/stylesheets/sass/pages/shows.scss
+++ b/public/stylesheets/sass/pages/shows.scss
@@ -3,6 +3,8 @@
     h3#featured-musicians-title {
       margin-top: 5px;
     }
+    .searchy-inline {
+    }
     .show-listing {
       .band,
       .venue,
